# Classifying-Buildings-from-Images

./: .gitignore  LICENSE  Makefile  README.md  app.py  pyproject.toml  requirements.txt  run_pipeline.py  test_api.py
.github/workflows/: ci.yml
configs/: default.yaml
data/: metadata.csv  metadata.md
results/: intermediate_results.jsonl  intermediate_results_BACKUP_old.jsonl  predictions.csv  summary.json
results_variation/: intermediate_results.jsonl  predictions.csv  summary.json
scripts/: download_dataset.py  reorganize_intel_dataset.py
src/: __init__.py  classifier.py  config.py  data_loader.py  model_analyzer.py
src/data/: __init__.py  dataset.py  mock_data.py
src/inference/: predict.py
src/models/: classifier.py
src/training/: evaluate.py  train.py
src/utils/: config.py  metrics.py  visualization.py
tests/: __init__.py  test_classifier.py  test_config.py  test_data_loader.py  test_dataset.py  test_inference.py  test_model.py  test_model_analyzer.py  test_run_pipeline.py  test_training_smoke.py
